# arcs

./: .appveyor.yml  .bazel.rc  .bazelignore  .bazelproject  .bazelversion  .clang-format  .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .htaccess  .prettierrc  .travis.yml  AUTHORS.md  BUILD.bazel  CONTRIBUTING.md  Dockerfile  Golden.kt  LICENSE  Manifest.kt  README.md  Test.kt  WORKSPACE  arcs-build-b0f82bbb1459.json.enc  arcs-build-key.json.enc  as.bazelproject  binding.gyp  cloudbuild.yaml  cloudbuild_branch.yaml  greenkeeper.json  ij.bazelproject  intellij.bazelproject  js-green-licenses.json  maven_install.json  package copy.json  package-lock.json  package.json  rollup.config.js  (+11 more)
.github/workflows/: copyright-check.yml  live-deploy.yml
TestParticle/: TestParticle.js  TestParticle.ptcl
TwoInputTestParticle/: TwoInputTestParticle.js  TwoInputTestParticle.ptcl
android/: deploy.sh
artifacts/: SerialContext.js  canonical.manifest  serial-context.recipes
artifacts_0_6_0/: canonical.manifest
asylo/: WORKSPACE
benchmark/: index.js  package-lock.json  package.json
build_defs/: BUILD  bazel_version_check.bzl  build_defs.bzl  kotlin.bzl  run_in_repo.bzl  run_in_repo_template.sh  schemas.bzl  sigh.bzl
cloud/: README.md  js-green-licenses.json  package.json  rollup.config.js  tslint.json
common/: README.md  tsconfig.json
concrete-storage/: firebase.js  package.json
config/: eslintrc.json  tsconfig.base.json  tslint.base.json
converters/: jsonldToManifest.js
debug/: outer-port-debug-channel.js
design/: README.md  design-docs-index.md  index.md  schemas.md
devtools/: README.md  bower.json  index.html  js-green-licenses.json  manifest.json  ng.html  package-lock.json  package.json  polymer.json
devtoolsNG/: README.md
docs/: IDE-Setup.md  README.md  api-reference.html  codelab.md  getting-started.md  glossary.md  index.md  overview.md  vision.md
emscripten_cache/: BUILD  README.md
enclave/: Dockerfile  README.md  WORKSPACE  start-couch.sh
entities/: Bar.schema  Description.manifest  Far.schema  Foo.schema  ImportantDate.schema  Person.js  Person.manifest  Person.schema  Product.js  Product.manifest  Product.schema  Thing.manifest  Thing.schema
extension/: README.md  arcs-content-script.js  arcs-extension.manifest  comm-to-arcs.js  communicate-to-arcs.js  configure.js  content-script.js  db.js  event-page-data.js  event-page.html  event-page.js  extension-utils.js  globals.js  index.css  index.test.html  init-arcs.js  load-browser-state.js  manifest.1.json  manifest.json  new-tab.html  new-tab.js  new-tab.manifest  package-lock.json  package.json  page-extractor.js  popup.html  popup.js  products.json  redirect-to-arcs.html  utils.js  webpages.json  wishlist.json
firebase/: .firebaserc  README.md  firebase.json
intellij-plugin/: README.md  build.gradle  settings.gradle
java/: BUILD
javaharness/: .bazelproject  BUILD  README.md  build.sh  errorprone_errors.bazelrc  hotreload.sh  install_dependencies.sh  j2cl_application.bzl
lib/: README.md
manifest-parser/: README.md  package-lock.json  package.json  pegit.js  setup.sh  tsconfig.json
particles/: canonical.arcs  canonical.manifest
particles-x/: canonical.arcs
particles_0_6_0/: canonical.manifest
platform/: assert-node.js  assert-web.js  atob-node.js  blob-node.js  blob-web.js  btoa-node.js  btoa-web.js  crypto-node.js  date-node.js  date-web.js  deviceinfo-node.js  deviceinfo-web.js  devtools-channel-node.js  devtools-channel-web.js  digest-node.js  digest-web.js  firebase-node.js  firebase-web.js  fs-node.js  fs-web.js  log-node.js  log-web.js  mocha-node.js  path-node.js  sourcemapped-stacktrace-node.js  vm-node.js
provisioning/: jsqrcode.js  manifest.json  new.html  package-lock.json  package.json  polymer.json  push-manifest.json
runtime/: SlotManager.js  affordance.js  api-channel.js  arc-exceptions.js  arc.js  browser-loader.js  bytes.js  coordinator.js  custom-loader.mjs  data-layer.js  debug.js  description-dom-formatter.js  description-generator.js  description.js  dom-context.js  dom-particle-base.js  dom-particle.js  dom-render-particle.js  dom-set-context.js  dom-slot.js  entity.js  fake-pec-factory.js  fetch-node.js  fetch-web.js  firebase-storage.js  firebase.js  gulpfile.js  handle.js  hosted-slot-consumer.js  hosted-slot-context.js  id.js  identifier.js  in-memory-storage.js  inner-PEC.js  load-particle.js  loader.js  manifest-meta.js  manifest-parser.peg  manifest-view.js  manifest.js  (+64 more)
server/: README.md  js-green-licenses.json  package-lock.json  package.json  tsconfig.json  tslint.json
shell/: README.md  gulpfile.js  index.html  package-lock.json  package.json  sw.js
shells/: test.sh
src/: BUILD  test.arcs
src_kt/: .bazelproject  WORKSPACE
storage/: atob-web.ts  deviceinfo-node.ts  deviceinfo-web.ts  devtools-channel-web.js  digest-node.ts  fetch-node.ts  log-web.ts  package-lock.json  path-web.ts  pec-industry.ts  pouchdb.js  vm-web.d.ts
storage-drivers/: package.json  webpack.config.js
strategizer/: hello-strategizer.js  package.json  strategizer.js
strategy-explorer/: bower.json  se-arc-view.html  se-explorer.html  se-population.html  se-recipe-view.html  se-recipe.html  strategy-explorer-demo.html  strategy-explorer.html  strategy-explorer.js
suggestinator/: hello-suggestinator.js  package.json  suggestinator.js
tools/: BUILD  Dockerfile.CI  KotlinCodestyle.xml  Project.codestyle.json  README.md  add_repo_root.sh  aml-language-server  android-sdk-packages.txt  arcs-build-key.json.enc  bazelisk  bootstrap.js  build-test-apks  clean  cloud-presubmit  cmp_dates.js  copycheck  custom-loader.mjs  decrypt  deploy  flowcheck  gcb.bazelrc  install  install-android-sdk  install_bazel.sh  java-tests  ktlint  language-server  local-presubmit  logging.sh  non-java-tests  npm-install-all  package-lock.json  package.json  reducethislist  run-android-e2e-tests-locally  run-android-e2e-tests-on-firebase  run-firebase-testlab  run_in_docker  schema2proto  setup  (+15 more)
tracelib/: options.js  package.json  trace.js
(+7905 files in other folders)
