licenses(["notice"])

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "tsconfig",
    srcs = [
        "config/tsconfig.base.json",
        "tsconfig.json",
    ],
)

filegroup(
    name = "node_modules",
    srcs = glob(
        ["node_modules/**/*"],
        exclude = [
            # Files under test & docs may contain file names that
            # are not legal Bazel labels (e.g.,
            # node_modules/ecstatic/test/public/äæ/ææ.html)
            "node_modules/test/**",
            "node_modules/docs/**",
            # Files with spaces are not allowed in Bazel runfiles
            # See https://github.com/bazelbuild/bazel/issues/4327
            "node_modules/**/* */**",
            "node_modules/**/* *",
        ],
    ),
)

# concrete-storage/node_modules
filegroup(
    name = "concrete_storage_node_modules",
    srcs = glob(
        ["concrete-storage/node_modules/**/*"],
        exclude = [
            "concrete-storage/node_modules/test/**",
            "concrete-storage/node_modules/docs/**",
            "concrete-storage/node_modules/**/* */**",
            "concrete-storage/node_modules/**/* *",
        ],
    ),
)

filegroup(
    name = "all_srcs",
    # NOTE: This glob doesn't include files in directories which have their own
    # BUILD files. You must add separate filegroups for those files.
    srcs = glob([
        "src/**",
        "tools/**",
        "devtools/shared/**",
        "shells/**/*.js",
        "modalities/**/*",
        "concrete-storage/*",
        "concrete-storage/build/*",
        "concrete-storage/platform/*",
        "config/*",
    ]) + [
        "//src/tools:all_srcs",
        "//tools:tools_srcs",
        ".eslintrc.json",
    ],
    visibility = ["//visibility:public"],
)

exports_files(["tsconfig.json"], visibility = ["//visibility:public"])

# Create a tsc_wrapped compiler rule to use in the ts_library
# compiler attribute when using self-managed dependencies
nodejs_binary(
    name = "@bazel/typescript/tsc_wrapped",
    entry_point = "@bazel/typescript/internal/tsc_wrapped/tsc_wrapped.js",
    # Point bazel to your node_modules to find the entry point
    node_modules = ["//:node_modules"],
)
