load("@npm_bazel_typescript//:index.bzl", "ts_config")
licenses(["notice"])

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["config/tsconfig.base.json"]
)

filegroup(
    name = "node_modules",
    srcs = glob(
        ["node_modules/**/*"],
        exclude = [
            # Files under test & docs may contain file names that
            # are not legal Bazel labels (e.g.,
            # node_modules/ecstatic/test/public/äæ/ææ.html)
            "node_modules/test/**",
            "node_modules/docs/**",
            # Files with spaces are not allowed in Bazel runfiles
            # See https://github.com/bazelbuild/bazel/issues/4327
            "node_modules/**/* */**",
            "node_modules/**/* *",
        ],
    ),
)

# concrete-storage/node_modules
filegroup(
    name = "concrete_storage_node_modules",
    srcs = glob(
        ["concrete-storage/node_modules/**/*"],
        exclude = [
            "concrete-storage/node_modules/test/**",
            "concrete-storage/node_modules/docs/**",
            "concrete-storage/node_modules/**/* */**",
            "concrete-storage/node_modules/**/* *",
        ],
    ),
)

filegroup(
    name = "all_srcs",
    # NOTE: This glob doesn't include files in directories which have their own
    # BUILD files. You must add separate filegroups for those files.
    srcs = glob([
        "src/**",
        "tools/**",
        "devtools/shared/**",
        "shells/**/*.js",
        "modalities/**/*",
        "concrete-storage/*",
        "concrete-storage/build/*",
        "concrete-storage/platform/*",
        "config/*",
    ]) + [
        "//tools:tools_srcs",
        ".eslintrc.json",
    ],
    visibility = ["//visibility:public"],
)

