licenses(["notice"])

package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kotlin_repositories", "define_kt_toolchain")

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.4",
    jvm_target = "1.8",
    language_version = "1.4"
)

filegroup(
    name = "tsconfig",
    srcs = [
        "config/tsconfig.base.json",
        "tsconfig.json",
    ],
)

filegroup(
    name = "node_modules",
    srcs = glob(
        ["node_modules/**/*"],
        exclude = [
            # Files under test & docs may contain file names that
            # are not legal Bazel labels (e.g.,
            # node_modules/ecstatic/test/public/äæ/ææ.html)
            "node_modules/test/**",
            "node_modules/docs/**",
            # Files with spaces are not allowed in Bazel runfiles
            # See https://github.com/bazelbuild/bazel/issues/4327
            "node_modules/**/* */**",
            "node_modules/**/* *",
        ],
    ),
)

# concrete-storage/node_modules
filegroup(
    name = "concrete_storage_node_modules",
    srcs = glob(
        ["concrete-storage/node_modules/**/*"],
        exclude = [
            "concrete-storage/node_modules/test/**",
            "concrete-storage/node_modules/docs/**",
            "concrete-storage/node_modules/**/* */**",
            "concrete-storage/node_modules/**/* *",
        ],
    ),
)

filegroup(
    name = "all_srcs",
    # NOTE: This glob doesn't include files in directories which have their own
    # BUILD files. You must add separate filegroups for those files.
    srcs = glob([
        "src/**",
        "tools/**",
        "devtools/shared/**",
        "shells/**/*.js",
        "modalities/**/*",
        "concrete-storage/*",
        "concrete-storage/build/*",
        "concrete-storage/platform/*",
        "config/*",
    ]) + [
        "//src/tools:all_srcs",
        "//tools:tools_srcs",
        ".eslintrc.json",
    ],
    visibility = ["//visibility:public"],
)
